# clean-pp

./: .gitignore  README.md  pyproject.toml  session-ses_2bb2.md
agents/: AGENTS.md  Prompt.md  refactoring_done.md  refactoring_prompt.md
scripts/: init_db.py
src/clean_app/: container.py  main.py
src/clean_app/application/: export_data.py  get_users.py  login.py
src/clean_app/domain/: exporters.py  repositories.py
src/clean_app/domain/entities/: user.py
src/clean_app/infrastructure/: sqlite_repo.py
src/clean_app/infrastructure/exporters/: __init__.py  csv_exporter.py  excel_exporter.py
src/clean_app/presentation/: cli.py
src/clean_app/presentation/cli/: __init__.py  commands.py
tests/: test_application.py  test_architecture.py  test_infrastructure.py
